--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,6 +7,84 @@
 body {
     height: 100vh;
     width: 100%;
-    background: #2A7B9B;
     background: linear-gradient(90deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 50%, rgba(237, 221, 83, 1) 100%);
+}
+
+#container {
+    max-width: 600px;
+    height: 600px;
+    background-color: #EFEFEF;
+    margin: 100px auto;
+    border-radius: 4px;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+}
+
+#to-do-heading {
+    position: relative;
+    display: flex;
+    height: 20%;
+}
+
+#to-do-body {
+    height: 80%;
+}
+
+#to-do-heading #input-to-do {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    font-size: 24px;
+    color: #fff;
+    background-color: rgb(28, 28, 30);
+    box-shadow: 0 0 .4vw rgba(0, 0, 0, 0.5), 0 0 0 .15vw transparent;
+    border-radius: 0.8vw;
+    border: none;
+    outline: none;
+    transition: .4s;
+    display: block;
+    height: 36px;
+    width: 80%;
+    margin: 36px auto;
+    padding: 8px;
+    padding-right: 76px;
+}
+
+#to-do-heading #input-to-do:hover {
+    box-shadow: 0 0 0 .15vw rgba(135, 207, 235, 0.186);
+}
+
+#to-do-heading #input-to-do:focus {
+    box-shadow: 0 0 0 .15vw skyblue;
+}
+
+#to-do-heading button {
+    position: absolute;
+    top: 39px;
+    right: 63px;
+    height: 30px;
+    width: 70px;
+    border: none;
+    background-color: #EF9651;
+    border-radius: 12px;
+    font-weight: bold;
+}
+
+#to-do-heading button:hover {
+    cursor: pointer;
+}
+
+#to-do-body .to-do-list {
+    list-style: none;
+    color: rgba(0, 0, 0, 0.6);
+    display: block;
+    margin: 0 62px;
+}
+
+.to-do-list .to-do-item {
+    font-size: 18px;
+    display: flex;
+}
+
+.to-do-list .to-do-item input[type="checkbox"] {
+    display: inline-block;
+    transform: scale(1.5);
+    margin-left: auto;
 }
