--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,25 +13,37 @@ body {
 #container {
     max-width: 600px;
     height: 600px;
-    background-color: #EFEFEF;
+    background-color: rgba(255, 255, 255, 0.5);
+
+    /* background-color: #EFEFEF; */
     margin: 100px auto;
-    border-radius: 4px;
+    border-radius: 8px;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
 #to-do-heading {
     position: relative;
     display: flex;
-    height: 20%;
+    flex-direction: column;
 }
 
-#to-do-body {
-    height: 80%;
+#to-do-heading .heading {
+    text-align: center;
+    padding: 16px;
+    text-transform: uppercase;
+}
+
+#to-do-heading .to-do-description {
+    font-size: 18px;
+    text-align: center;
+    padding-bottom: 16px;
+
 }
 
 #to-do-heading #input-to-do {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-    font-size: 24px;
+    font-family: -apple-system, sans-serif;
+    font-size: 16px;
+    font-weight: 100;
     color: #fff;
     background-color: rgb(28, 28, 30);
     box-shadow: 0 0 .4vw rgba(0, 0, 0, 0.5), 0 0 0 .15vw transparent;
@@ -39,17 +51,11 @@ body {
     border: none;
     outline: none;
     transition: .4s;
-    display: block;
-    height: 36px;
-    width: 80%;
-    margin: 36px auto;
-    padding: 8px;
-    padding-right: 76px;
+    padding: 8px 80px 8px 8px;
+    width: 75%;
+    margin: 0 auto;
 }
 
-#to-do-heading #input-to-do:hover {
-    box-shadow: 0 0 0 .15vw rgba(135, 207, 235, 0.186);
-}
 
 #to-do-heading #input-to-do:focus {
     box-shadow: 0 0 0 .15vw skyblue;
@@ -57,8 +63,8 @@ body {
 
 #to-do-heading button {
     position: absolute;
-    top: 39px;
-    right: 63px;
+    bottom: 3px;
+    right: 78px;
     height: 30px;
     width: 70px;
     border: none;
@@ -69,22 +75,39 @@ body {
 
 #to-do-heading button:hover {
     cursor: pointer;
+    background-color: #ef5151;
 }
+
+#to-do-body {}
 
 #to-do-body .to-do-list {
     list-style: none;
     color: rgba(0, 0, 0, 0.6);
     display: block;
     margin: 0 62px;
+    padding: 16px;
 }
 
 .to-do-list .to-do-item {
     font-size: 18px;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px 0;
+}
+
+.to-do-list .to-do-item label {
+    padding: 2px;
+}
+
+.to-do-list .to-do-item label:hover {
+    background-color: #ef5151;
+    border-radius: 4px;
+    text-decoration: line-through;
 }
 
 .to-do-list .to-do-item input[type="checkbox"] {
     display: inline-block;
     transform: scale(1.5);
-    margin-left: auto;
+    /* margin-left: auto; */
 }
