--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,14 +5,13 @@
 }
 
 body {
-    height: 100vh;
     width: 100%;
     background: linear-gradient(90deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 50%, rgba(237, 221, 83, 1) 100%);
 }
 
 #container {
     max-width: 600px;
-    height: 600px;
+    min-height: 600px;
     background-color: rgba(255, 255, 255, 0.5);
 
     /* background-color: #EFEFEF; */
@@ -56,6 +55,9 @@ body {
     margin: 0 auto;
 }
 
+#to-do-heading #input-to-do.invalid {
+    box-shadow: 0 0 .4vw rgba(246, 0, 0, 0.8), 0 0 0 .15vw transparent !important;
+}
 
 #to-do-heading #input-to-do:focus {
     box-shadow: 0 0 0 .15vw skyblue;
@@ -78,9 +80,7 @@ body {
     background-color: #ef5151;
 }
 
-#to-do-body {}
-
-#to-do-body .to-do-list {
+#to-do-body #to-do-list {
     list-style: none;
     color: rgba(0, 0, 0, 0.6);
     display: block;
@@ -88,7 +88,7 @@ body {
     padding: 16px;
 }
 
-.to-do-list .to-do-item {
+#to-do-list .to-do-item {
     font-size: 18px;
     display: flex;
     justify-content: space-between;
@@ -96,18 +96,18 @@ body {
     padding: 8px 0;
 }
 
-.to-do-list .to-do-item label {
+#to-do-list .to-do-item label {
     padding: 2px;
 }
 
-.to-do-list .to-do-item label:hover {
+#to-do-list .to-do-item label:hover {
     background-color: #ef5151;
     border-radius: 4px;
     text-decoration: line-through;
 }
 
-.to-do-list .to-do-item input[type="checkbox"] {
+#to-do-list .to-do-item input[type="checkbox"] {
     display: inline-block;
     transform: scale(1.5);
-    /* margin-left: auto; */
+    margin-left: auto;
 }
